--- a/admin/package.json
+++ b/admin/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "chart.js": "^4.2.1",
     "ngx-pagination": "^6.0.3",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.7.3",
