--- a/users/package.json
+++ b/users/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --port 8080",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -22,17 +22,14 @@
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.3",
-    
-
     "ngx-pagination": "^6.0.3",
+    "ngx-spinner": "^13.0.0",
     "ngx-star-rating": "^2.1.0",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.7.3",
     "swiper": "^9.1.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
-    
-
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.5",
