--- a/admin/package.json
+++ b/admin/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~13.3.0",
     "chart.js": "^4.2.1",
     "ngx-pagination": "^6.0.3",
+    "ngx-spinner": "^13.0.0",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.7.3",
     "swiper": "^9.1.0",
